# Heap-Layers

./: .gitignore  BUILD  CLAUDE.md  Makefile  NOTICE  README.md  WORKSPACE  heaplayers  heaplayers.h  leak.cxx  x.cxx
.github/workflows/: build-and-test.yml
examples/kingsley/: CMakeLists.txt  compile  libkingsley.cpp
heaps/: all.h
heaps/buildingblock/: adaptheap.h  all.h  boundedfreelistheap.h  chunkheap.h  coalesceheap.h  freelistheap.h
heaps/combining/: all.h  hybridheap.h  segheap.h  strictsegheap.h  tryheap.h
heaps/debug/: all.h  backtraceheap.h  checkheap.h  debugheap.h  logheap.h  sanitycheckheap.h  statsheap.h
heaps/general/: all.h  dlheap.h  kingsleyheap.h  leamallocheap.h  oldkingsleyheap.h
heaps/objectrep/: addheap.h  all.h  coalesceableheap.h  headerheap.h  sizeheap.h  sizeownerheap.h
heaps/special/: all.h  bumpalloc.h  nestedheap.h  obstack.h  obstackheap.h  obstackreap.h  sbrk.c  xallocheap.h  zoneheap.h
heaps/threads/: all.h  bufferedlockedheap.h  lockedheap.h  phothreadheap.h  sizethreadheap.h  threadheap.h  threadspecificheap.h
heaps/top/: all.h  mallocheap.h  mmapheap.h  sbrkheap.h  staticbufferheap.h  staticheap.h
heaps/utility/: all.h  exactlyoneheap.h  exceptionheap.h  localmallocheap.h  nullheap.h  oneheap.h  perclassheap.h  profileheap.h  slopheap.h  sysmallocheap.h  traceheap.h  uniqueheap.h
heaps/utility/old/: oneheap.h
legacy/reap/: addheader.h  clearoptimizeheap.h  libreap.cpp  reap.h  regionheap.cpp  regionheap.h  regionheapapi.h  regionsimulator.cpp  regionsimulator.h
locks/: all.h  maclock.h  oldspinlock.h  posixlock.h  recursivelock.h  spinlock-old.h  spinlock.h  winlock.h
threads/: cpuinfo.cpp  cpuinfo.h  fred.h
utility/: align.h  all.h  arch.h  bins.h  bins16k.h  bins4k.h  bins64k.h  bins8k.h  binspow2.h  checkpoweroftwo.h  cpp23compat.h  dllist.h  dynarray.h  exactlyone.h  freesllist.h  gcd.h  hash.h  ilog2.cpp  ilog2.h  istrue.h  lcm.h  modulo.h  myhashmap.h  sassert.h  singleton.h  sllist.h  testalign.cpp  timer-old.h  timer.h  tprintf.h
wrappers/: README.html  ansiwrapper.h  generic-memalign.cpp  gnuwrapper-hooks.cpp  gnuwrapper.cpp  heapredirect.h  macinterpose.h  macwrapper.cpp  mallocinfo.h  mmapwrapper.h  stlallocator.h  winwrapper.cpp  wrapper.cpp  x86jump.h
